added shader class

--- a/PotatoEngine/CMakeLists.txt
+++ b/PotatoEngine/CMakeLists.txt
@@ -8,11 +8,12 @@ set (LIB
 
 set (CPP
 	main.cpp
+	shader.cpp
 )
 
 set (HPP
-	
+	shader.hpp
 )
 
-add_executable (${PROJECT_NAME} ${CPP} ${HPP})
+add_executable (${PROJECT_NAME} ${CPP} ${HPP} "shader.cpp" "shader.hpp")
 target_link_libraries(${PROJECT_NAME} ${LIB})
