--- a/PotatoEngine/CMakeLists.txt
+++ b/PotatoEngine/CMakeLists.txt
@@ -9,11 +9,15 @@ set (LIB
 set (CPP
 	main.cpp
 	shader.cpp
+	event_registry.cpp
 )
 
 set (HPP
 	shader.hpp
+	camera.hpp
+	event.hpp
+	event_registry.hpp
 )
 
-add_executable (${PROJECT_NAME} ${CPP} ${HPP} "shader.cpp" "shader.hpp")
+add_executable (${PROJECT_NAME} ${CPP} ${HPP})
 target_link_libraries(${PROJECT_NAME} ${LIB})
