--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required (VERSION 3.15)
 
 include(GoogleTest)
 
-add_executable(test_test test_test.cpp)
-target_link_libraries(test_test gtest)
-gtest_add_tests(TARGET test_test TEST_SUFFIX "" TEST_LIST "")
+set (LIB
+	gtest
+	PotatoEngineLib
+)
+
+add_executable(ParseTest "input_constraint_parse_test.cpp")
+target_link_libraries(ParseTest ${LIB})
+gtest_add_tests(TARGET ParseTest TEST_SUFFIX "" TEST_LIST "")
